--- a/src/main/resources/templates/single-transaction.html
+++ b/src/main/resources/templates/single-transaction.html
@@ -1,9 +1,36 @@
 <html>
+<head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
+</head>
+
 <body>
-<h1>Single transaction <span data-th-text="${transaction.id}"></span></h1>
-
-<p data-th-text="${transaction.product}"></p>
-
 <a href="/transactions">Go back</a>
+<div class="container">
+    <div class="row">
+        <div class="col-xl-12 col-md-6 mb-4">
+            <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                <span data-th-text="${transaction.product}"></span>
+                            </div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                <span data-th-text="${transaction.amount}"></span>
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
