--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -46,7 +46,11 @@
                 <a data-th-href="'/transactions/'+${transaction.id}" data-th-text="${transaction.id}"> </a>
             </td>
 
-            <td data-th-text="${transaction.product}"></td>
+            <td>
+                <a class="text-decoration-none text-dark"
+                   data-th-href="'/transactions?showTransaction='+${transaction.id}"
+                   data-th-text="${transaction.product}"> </a>
+            </td>
             <td data-th-text="${transaction.amount}"></td>
             <td data-th-text="${transaction.type}"></td>
             <td>
@@ -61,6 +65,28 @@
         </tr>
         </tbody>
     </table>
+    <div class="row mt-5" data-th-if="${showTransaction!=null}">
+        <div class="col-xl-12 col-md-6 mb-4">
+            <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                <span data-th-text="${showTransaction.product}"></span>
+                            </div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                <span data-th-text="${showTransaction.amount}"></span>
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <div class="modal fade" id="transaction-modal">
